<resources>
    <string name="app_name">Abiri</string>
    <string name="base_url_title">http://44.205.252.185:4000</string>
    <string name="downpayment">Down payment</string>
    <string name="search">Search</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="edit">EDIT</string>
    <string name="edit_profile">Edit profile</string>

    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_must_contain_an_uppercase_and_number">Password must contain an uppercase and number</string>
    <string name="public_view_description">This account is currently set for public view as per your preferences. You can change this setting at any time in your account settings. [CHANGE PREFERENCES]</string>
    <string name="admin_access_description">Admin access is required. [GET ADMIN ACCESS]</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string-array name="account_types">
        <item>Driver</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_taxi_maps">TaxiMapsActivity</string>
    <string name="log_out">LOG OUT</string>
    <string name="notification_channel">abiri_message</string>
    <string name="decoration_icon">decoration icon</string>
    <string name="change_user_name">Change user name</string>
    <string name="refresh">refresh</string>
    <string name="back_button">back_button</string>
    <string name="first_time_prompt">First Time Prompt</string>
    <string name="upload_car">Upload car</string>
    <string name="profile_image">profile image</string>
    <string name="options">options</string>
    <string name="close">close</string>
    <string name="notifications">Notifications</string>
    <string name="image">Image</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="navigation_icon">navigation_icon</string>
    <string name="taxi_guide_txt1">Request Affordable Rides From our Verified Drivers</string>
    <string name="taxi_guide_txt2">Request for a ride and get picked by a driver near you in minutes</string>
    <string name="fun_guide_txt2">View and visit fun spaces near you to have some fun after a tiring day at work.</string>
    <string name="hire_guide_txt1">Rent your Dream Car an Affordable Price</string>
    <string name="hire_guide_txt2">We have a number of luxurious vehicles available for hire at an affordable cost.</string>
    <string name="rating">rating</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="waiting_for_driver_s_response">Finding a ride for you</string>
    <string name="welcome_to_abiri_driver">Welcome to Abiri Driver</string>
    <string name="image_placeholder">image_placeholder</string>
    <string name="identity_policy">This document will be used according to our terms and conditions. Its sole aim is to help us identify you.</string>
    <string name="add_national_id">Add National ID</string>
    <string name="confirm_your_identity">Confirm your Identity</string>
    <string name="upload_the_necessary_documents">Upload the necessary documents</string>
    <string name="clear">Clear</string>
    <string name="tell_us_about_your_car">Tell us about your vehicle</string>
    <string name="rent_a_car_near_you">Rent a car Near You</string>
    <string name="history">History</string>
    <string name="common_places">Common places</string>
    <string name="what_type_of_ride_would_like_to_register_with_us">What type of ride would like to register with us?</string>
    <string name="let_riders_identify_your_car">Let riders identify your car</string>
    <string name="setup_your_drivers_account_with_us">Setup your Drivers Account With Us</string>
    <string name="location_button">location_button</string>
    <string name="icon">icon</string>
    <string name="default_web_client_id">922289955998-p7guel3j7175moknmtelbqjp7rh6rqig.apps.googleusercontent.com</string>
    <string-array name="transaction_types">
        <item>Send Money</item>
        <item>Buy Goods and Services</item>
        <item>Pay Bill</item>
        <item>Pochi La Biashara</item>
        <item>Check Balance</item>
    </string-array>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>