<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".guides.CarDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="4dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/custom_progress_bar" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="28"
                    android:progressDrawable="@drawable/custom_progress_bar" />

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:max="0"
                    android:progress="30"
                    android:progressDrawable="@drawable/custom_progress_bar" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:id="@+id/upload_lt"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/let_riders_identify_your_car"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Upload images of your vehicle for easier identification"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/image_lt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/image_placeholder"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imagePlaceholder"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:shapeAppearanceOverlay="@style/MiniRoundedImageView"
                        android:contentDescription="@string/image_placeholder"
                        android:scaleType="centerCrop" />

                    <!-- Other UI elements can go here -->

                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selected_images"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/linear_lt_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Upload images"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    app:tint="?attr/imageButtonStyle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/identities_lt"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/upload_the_necessary_documents"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/confirm_your_identity"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/image_lt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/image_placeholder"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/underlinedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_national_id"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imagePlaceholder2"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:maxHeight="300dp"
                        app:shapeAppearanceOverlay="@style/MiniRoundedImageView"
                        android:contentDescription="@string/image_placeholder"
                        android:scaleType="fitXY" />

                    <!-- Other UI elements can go here -->

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/clear"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    app:tint="?attr/imageButtonStyle" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/item_background_selected"
                android:visibility="gone"
                android:layout_marginHorizontal="16dp"
                android:id="@+id/progress_lt"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Uploading"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:id="@+id/progress_title"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/progress_title"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/custom_progress_bar"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/identity_policy" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/back_button"
                android:padding="4dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/arrow_back_24"
                app:tint="?attr/imageButtonStyle" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_toEndOf="@id/previous_button"
                android:layout_toStartOf="@id/next_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:padding="4dp"
                android:text="@string/next"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:tint="?attr/imageButtonStyle" />
        </RelativeLayout>
    </LinearLayout>
</layout>