<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".guides.TaxiGuideActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/skip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:focusable="true"
                app:cornerRadius="8dp"
                android:backgroundTint="@android:color/transparent"
                android:text="Skip"
                android:clickable="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:tint="?attr/imageButtonStyle"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/skip_button"
                android:layout_above="@id/text_lt"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/verified_drivers_1"
                app:shapeAppearanceOverlay="@style/MiniRoundedImageView"
                android:contentDescription="@string/image_placeholder" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="150dp"
                android:id="@+id/text_lt"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/taxi_guide_txt1"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/taxi_guide_txt2"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_margin="6dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                app:cornerRadius="8dp"
                android:background="@drawable/linear_lt_bg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="Previous"
                app:tint="?attr/imageButtonStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:padding="4dp"
                app:cornerRadius="8dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="Next"
                app:tint="?attr/imageButtonStyle"/>
        </RelativeLayout>
    </LinearLayout>
</layout>